tests/ui/generics/single-colon-path-not-const-generics.stderr
error: path separator must be a double colon
  --> $DIR/single-colon-path-not-const-generics.rs:8:18
   |
LL |   a: Vec<foo::bar:A>,
   |                  ^
   |
   = note: if you meant to annotate an expression with a type, the type ascription syntax has been removed, see issue #101728 <https://github.com/rust-lang/rust/issues/101728>
help: use a double colon instead
   |
LL |   a: Vec<foo::bar::A>,
   |                   +

error: aborting due to 1 previous error

